[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI_default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.18921
margin_bottom = 1.18921
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.786
margin_top = -216.582
margin_right = -117.786
margin_bottom = -66.5815
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 81.0
margin_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/General"]
margin_right = 81.0
margin_bottom = 22.0
text = "Hauptmenü"
align = 1

[node name="btn_exit" type="Button" parent="HBoxContainer/General"]
margin_top = 26.0
margin_right = 81.0
margin_bottom = 54.0
text = "Exit"

[node name="Kinetics" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 85.0
margin_right = 305.0
margin_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/Kinetics"]
margin_right = 220.0
margin_bottom = 22.0
text = "Kinematik"
align = 1

[node name="btn_lin_cube" type="Button" parent="HBoxContainer/Kinetics"]
margin_top = 26.0
margin_right = 220.0
margin_bottom = 54.0
text = "lineare Bewegung: Würfel"

[node name="btn_lin_ball" type="Button" parent="HBoxContainer/Kinetics"]
margin_top = 58.0
margin_right = 220.0
margin_bottom = 86.0
text = "lineare Bewegung: Kugel"

[node name="btn_lin_both" type="Button" parent="HBoxContainer/Kinetics"]
margin_top = 90.0
margin_right = 220.0
margin_bottom = 118.0
text = "lineare Bewegung: Vergleich"

[node name="btn_pendulum1" type="Button" parent="HBoxContainer/Kinetics"]
margin_top = 122.0
margin_right = 220.0
margin_bottom = 150.0
text = "Fadenpendel"

[node name="btn_linear_accelereation" type="Button" parent="HBoxContainer/Kinetics"]
margin_top = 154.0
margin_right = 220.0
margin_bottom = 182.0
text = "glm. beschleunigte Bewegung"
[connection signal="pressed" from="HBoxContainer/General/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="HBoxContainer/Kinetics/btn_lin_cube" to="." method="_on_btn_lin_cube_pressed"]
[connection signal="pressed" from="HBoxContainer/Kinetics/btn_lin_ball" to="." method="_on_btn_lin_ball_pressed"]
[connection signal="pressed" from="HBoxContainer/Kinetics/btn_lin_both" to="." method="_on_btn_lin_both_pressed"]
[connection signal="pressed" from="HBoxContainer/Kinetics/btn_pendulum1" to="." method="_on_btn_pendulum1_pressed"]
[connection signal="pressed" from="HBoxContainer/Kinetics/btn_linear_accelereation" to="." method="_on_btn_linear_accelereation_pressed"]
